--- a/stylesheets/large.css
+++ b/stylesheets/large.css
@@ -488,8 +488,9 @@ body {
 }
 
 .webStoreBadge:hover {
-	transition-duration: .5s;
-	border: white solid 4px;
+	transition-duration: .3s;
+	background-color: #f86754;
+	border-radius: 15px;
 }
 
 .containerDividerFooter {
