--- a/stylesheets/contactSmall.css
+++ b/stylesheets/contactSmall.css
@@ -64,7 +64,7 @@ body {
 
 .active {
 	text-decoration: underline !important;
-	text-decoration-color: #7389F7 !important;
+	text-decoration-color: #7389f7 !important;
 }
 
 .navText {
@@ -403,7 +403,7 @@ body {
 	text-align: center;
 	font-family: 'Swis721-reg';
 	font-size: 15px;
-	color: #49586D;
+	color: #49586d;
 }
 
 .patreonButton {
@@ -420,12 +420,11 @@ body {
 .mainContainerSignUp {
 	background-color: #3d444d;
 	display: grid;
-	grid-template-rows: 20vh 160vh;
+	grid-template-rows: 20vh 200vh;
 }
 
 .linked {
 	text-decoration: none;
-	
 }
 
 .button {
@@ -456,7 +455,7 @@ body {
 	background-color: white;
 	border-radius: 15px;
 	display: grid;
-	grid-template-rows: 12% 12% 10% 40% 26% ;
+	grid-template-rows: 12% 12% 10% 40% 26%;
 	font-family: 'Swis721-reg';
 }
 
@@ -470,7 +469,7 @@ body {
 	background-color: white;
 	border-radius: 15px;
 	display: grid;
-	grid-template-rows: 12% 12% 10% 40% 26% ;
+	grid-template-rows: 12% 12% 10% 40% 26%;
 	font-family: 'Swis721-reg';
 }
 
