--- a/stylesheets/contactSmall.css
+++ b/stylesheets/contactSmall.css
@@ -107,9 +107,7 @@ body {
 	position: relative;
 	top: 25px;
 	left: 15px;
-
 	z-index: 1;
-
 	-webkit-user-select: none;
 	user-select: none;
 }
@@ -117,7 +115,6 @@ body {
 #menuToggle a {
 	text-decoration: none;
 	color: #232323;
-
 	transition: color 0.3s ease;
 }
 
@@ -132,9 +129,7 @@ body {
 	position: absolute;
 	top: -7px;
 	left: -5px;
-
 	cursor: pointer;
-
 	opacity: 0;
 	z-index: 2;
 
@@ -147,14 +142,10 @@ body {
 	height: 4px;
 	margin-bottom: 5px;
 	position: relative;
-
 	background: #cdcdcd;
 	border-radius: 3px;
-
 	z-index: 1;
-
 	transform-origin: 4px 0px;
-
 	transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
 		opacity 0.55s ease;
 }
@@ -455,7 +446,7 @@ body {
 	background-color: white;
 	border-radius: 15px;
 	display: grid;
-	grid-template-rows: 12% 12% 10% 40% 26%;
+	grid-template-rows: 12% 10% 4% 48% 26%;
 	font-family: 'Swis721-reg';
 }
 
@@ -469,7 +460,7 @@ body {
 	background-color: white;
 	border-radius: 15px;
 	display: grid;
-	grid-template-rows: 12% 12% 10% 40% 26%;
+	grid-template-rows: 12% 10% 4% 48% 26%;
 	font-family: 'Swis721-reg';
 }
 
@@ -520,4 +511,44 @@ li {
 	left: 26%;
 	color: white;
 	font-size: 26px;
+}
+
+.commandsTitle {
+	margin: auto;
+	font-size: 25px;
+	text-align: center;
+}
+
+.commandTier {
+	margin-top: 0px;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	width: 400px;
+	height: 600px;
+	margin: auto;
+	background-color: white;
+	border-radius: 15px;
+	display: grid;
+	grid-template-rows: 22% 58% 20%;
+	font-family: 'Swis721-reg';
+}
+
+.commandTier2 {
+	margin-top: 0px;
+	grid-row-start: 2;
+	grid-row-end: 3;
+	width: 400px;
+	height: 600px;
+	margin: auto;
+	background-color: white;
+	border-radius: 15px;
+	display: grid;
+	grid-template-rows: 22% 58% 20%;
+	font-family: 'Swis721-reg';
+}
+
+
+.subText {
+	font-family: 'Swis721-reg';
+	font-size: 15px;
 }
