--- a/stylesheets/extraLarge.css
+++ b/stylesheets/extraLarge.css
@@ -37,7 +37,7 @@ body {
 	background-color: #55606e;
 	display: grid;
 	grid-template-rows: 60px;
-	grid-template-columns: repeat(7, 1fr);
+	grid-template-columns: repeat(8, 1fr);
 	min-height: 40px;
 }
 
@@ -55,7 +55,7 @@ body {
 
 .active {
 	text-decoration: underline !important;
-	text-decoration-color: #7389F7 !important;
+	text-decoration-color: #7389f7 !important;
 }
 
 .navText {
@@ -91,8 +91,8 @@ body {
 }
 
 .login {
-	grid-column-start: 7;
-	grid-column-end: 8;
+	grid-column-start: 8;
+	grid-column-end: 9;
 	margin: auto;
 }
 
@@ -220,8 +220,6 @@ body {
 	top: 35%;
 	right: 15%;
 }
-
-
 
 /* Container 1 Text */
 
@@ -472,17 +470,19 @@ body {
 	grid-row-end: 3;
 	grid-column-start: 2;
 	grid-column-end: 3;
+	background-color: #f86754;
 	height: 110px;
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
 	top: 35%;
 	cursor: pointer;
+	border-radius: 15px;
 }
 
 .webStoreBadge:hover {
 	transition-duration: .3s;
-	background-color: #f86754;
+	background-color: darkgrey;
 	border-radius: 15px;
 }
 
@@ -580,5 +580,5 @@ body {
 .disclaimer {
 	font-family: 'Swis721-reg';
 	font-size: 15px;
-	color: #49586D;
+	color: #49586d;
 }
