--- a/stylesheets/contactSmall.css
+++ b/stylesheets/contactSmall.css
@@ -233,6 +233,30 @@ body {
 	position: relative;
 }
 
+.aboutContainer {
+	width: 85%;
+	margin: auto;
+}
+
+.headerText {
+	color: white;
+	font-family: 'Swis721-reg';
+	text-decoration: none;
+	padding-top: 25px;
+}
+
+.bodyText {
+	color: white;
+	font-family: 'Swis721-reg';
+	text-decoration: none;
+}
+
+.linkMeta {
+	color: rgb(217, 186, 252);
+	font-weight: bold;
+	text-decoration: none;
+}
+
 .header {
 	font-family: 'Swis721-Filled';
 	color: #e6e6e2;
@@ -546,7 +570,6 @@ li {
 	grid-template-rows: 22% 58% 20%;
 	font-family: 'Swis721-reg';
 }
-
 
 .subText {
 	font-family: 'Swis721-reg';
